--- a/app/src/main/res/layout/activity_user_screen.xml
+++ b/app/src/main/res/layout/activity_user_screen.xml
@@ -13,31 +13,44 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/light_blue"
         app:titleTextColor="@color/white"
-        app:title="Welcome"
+        app:title="Dashboard"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/tv_hi"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="212dp"
         android:text="@string/hi"
         android:textColor="@color/light_blue"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_greet"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:textColor="@color/light_blue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_hi"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/tv_hi"
         app:layout_constraintTop_toTopOf="@+id/tv_hi"
+        tools:text="Selamat Pagi"/>
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/light_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_hi"
+        app:layout_constraintTop_toBottomOf="@+id/tv_greet"
         tools:text="Daffa" />
 
     <Button
@@ -46,15 +59,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/btn_selector_apply"
         android:maxLines="2"
         android:text="@string/pilih_event"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/tv_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_hi"
-        app:layout_constraintTop_toBottomOf="@+id/tv_hi" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <Button
         android:id="@+id/btn_guest"
@@ -70,12 +83,5 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_event"
         app:layout_constraintStart_toStartOf="@+id/btn_event"
         app:layout_constraintTop_toBottomOf="@+id/btn_event" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="205dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
