--- a/app/src/main/res/layout/item_event_map.xml
+++ b/app/src/main/res/layout/item_event_map.xml
@@ -18,29 +18,31 @@
 
         <ImageView
             android:id="@+id/img_event"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:src="@color/cardview_dark_background"
             tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/tv_name_event"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:maxLines="2"
             android:textAlignment="center"
+            android:textColor="@color/light_blue"
             android:textSize="18sp"
-            android:background="@color/dark_gray"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/img_event"
             app:layout_constraintStart_toStartOf="@+id/img_event"
-            app:layout_constraintTop_toBottomOf="@+id/img_event" />
+            app:layout_constraintTop_toBottomOf="@+id/img_event"
+            tools:text="Event" />
 
         <TextView
             android:id="@+id/tv_date"
@@ -49,7 +51,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:textAlignment="center"
-            android:background="@color/dark_gray"
+            android:textColor="@color/light_blue"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_name_event"
